@@ -1,0 +1,1 @@
+prog: ../../drd/tests/trylock
